--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -372,7 +372,7 @@ $nav-link-height:         $control-height !default;
 $nav-link-line-height:    1 !default;
 $nav-link-opacity:        .7 !default;
 $nav-link-opacity-active: 1 !default;
-$nav-link-padding-x:      $spacer-x !default;
+$nav-link-padding-x:      $spacer !default;
 $nav-link-padding-y:      (($control-height - $nav-link-font-size * $nav-link-line-height) / 2) !default;
 $nav-item-spacer-x:       1px !default;
 $nav-item-spacer-y:       1px !default;
