Remove `$table-margin-y`

--- a/scss/mixins/_table.scss
+++ b/scss/mixins/_table.scss
@@ -3,7 +3,7 @@
   border: 0;
   border-radius: $table-border-radius;
   box-shadow: $table-box-shadow;
-  margin-bottom: $table-margin-y;
+  margin-bottom: $spacer-y;
   max-width: 100%;
   width: 100%;
 }
