--- a/scss/common/_topic-list.scss
+++ b/scss/common/_topic-list.scss
@@ -457,6 +457,12 @@
     @include typography-caption;
 
     margin-top: 0;
+
+    .discourse-tag {
+      &.box {
+        top: auto;
+      }
+    }
   }
 }
 
