--- a/scss/common/_header.scss
+++ b/scss/common/_header.scss
@@ -11,34 +11,12 @@
 .d-header {
   box-shadow: $header-box-shadow;
   height: auto;
-  margin: 0;
+  margin-bottom: $spacer-y;
   min-height: $header-height;
-  padding: $header-padding-y $header-padding-x;
+  padding: $header-padding-y 0;
 
-  .btn {
-    &.login-button {
-      .fa-user {
-        margin-right: 100%;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        text-indent: 0;
-        transform: translate(-50%, -50%);
-      }
-    }
-
-    &.sign-up-button {
-      @include material-icons('person_add');
-
-      &::before {
-        margin-right: 100%;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        text-indent: 0;
-        transform: translate(-50%, -50%);
-      }
-    }
+  .docked & {
+    margin-bottom: 0;
   }
 
   .contents {
@@ -80,51 +58,22 @@
   }
 
   .header-buttons {
-    align-items: center;
-    display: flex;
     margin-top: 0;
 
     .btn {
-      align-items: center;
-      background-color: transparent;
-      background-image: none;
-      border-radius: 50%;
-      box-shadow: none;
+      @include btn-raised-reverse;
+
       color: unquote('$header-primary');
-      display: flex;
-      font-size: inherit;
-      height: ($header-height - $header-padding-y * 2);
-      justify-content: center;
-      line-height: inherit;
       margin-left: $header-inner-spacer-x;
-      overflow: hidden;
-      padding: 0;
-      width: ($header-height - $header-padding-y * 2);
+      padding: $btn-padding-y-sm $btn-padding-x-sm;
 
-      @include focus-hover {
-        background-color: color-chooser($header-item-overlay-dark, $header-item-overlay-light);
-        color: unquote('$header-primary');
-      }
-
-      &:focus {
-        outline: 0;
-      }
-
-      .d-button-label {
-        border: 0;
-        clip: rect(0, 0, 0, 0);
-        height: 1px;
-        overflow: hidden;
-        padding: 0;
-        position: absolute;
-        width: 1px;
+      &:hover,
+      &.btn-hover {
+        .discourse-no-touch & {
+          background-color: color-chooser($header-item-overlay-dark, $header-item-overlay-light);
+        }
       }
     }
-  }
-
-  .panel {
-    margin-left: auto;
-    order: 1;
   }
 
   #site-logo {
@@ -133,7 +82,6 @@
 
   .title {
     margin-right: $header-inner-spacer-x;
-    margin-left: $header-inner-spacer-x;
 
     a {
       align-items: center;
@@ -161,12 +109,12 @@
 }
 
 .d-header-icons {
-  align-items: center;
-  display: flex;
-  margin: 0;
-
   .badge-notification {
     min-width: ($font-size-base * $line-height-base);
+  }
+
+  .d-icon {
+    color: inherit;
   }
 
   .icon {
@@ -176,11 +124,16 @@
     height: ($header-height - $header-padding-y * 2);
     margin-left: $header-inner-spacer-x;
     padding: 0;
+    transition: background-color $transition-duration $transition-timing-function;
     width: ($header-height - $header-padding-y * 2);
 
     @include focus-hover {
       background-color: color-chooser($header-item-overlay-dark, $header-item-overlay-light);
       border: 0;
+
+      .d-icon {
+        color: inherit;
+      }
     }
 
     &:active {
