--- a/scss/common/_modal.scss
+++ b/scss/common/_modal.scss
@@ -448,6 +448,14 @@
     }
   }
 
+  tr {
+    &.instructions {
+      label {
+        font-weight: normal;
+      }
+    }
+  }
+
   .modal-body {
     p {
       font-size: inherit;
@@ -541,16 +549,10 @@
 
 .modal-footer {
   align-items: flex-start;
-  border-top: 0;
+  border-radius: 0 0 $modal-border-radius $modal-border-radius;
   display: flex;
   flex-direction: row-reverse;
   padding: $modal-footer-padding-y $modal-footer-padding-x;
-
-  .modal-header ~ &,
-  .modal-header ~ div > &,
-  .modal-header ~ form > & {
-    border-top: $modal-border-width solid color-chooser($modal-border-color-dark, $modal-border-color-light);
-  }
 
   :not(.disclaimer) a {
     @include btn-base;
@@ -571,33 +573,12 @@
   }
 
   .btn {
-    background-color: transparent;
-    box-shadow: none;
+    @include btn-raised-reverse();
+
     margin: 0 0 0 $card-inner-spacer-x;
-    padding-right: $card-inner-spacer-x;
-    padding-left: $card-inner-spacer-x;
-
-    @include focus-hover {
-      background-color: color-chooser($btn-bg-hover-dark, $btn-bg-hover-light);
-    }
-
-    &.btn-hover {
-      background-color: color-chooser($btn-bg-hover-dark, $btn-bg-hover-light);
-    }
-
-    &:active,
-    &.btn-active {
-      background-color: color-chooser($btn-bg-active-dark, $btn-bg-active-light);
-    }
 
     &:last-child {
       margin-left: 0;
-    }
-
-    &[disabled],
-    &.disabled {
-      background-color: transparent !important;
-      color: color-chooser($btn-color-disabled-dark, $btn-color-disabled-light) !important;
     }
 
     &.btn-danger {
@@ -611,7 +592,7 @@
 }
 
 .modal-header {
-  border-bottom: $modal-border-width solid color-chooser($modal-border-color-dark, $modal-border-color-light);
+  border-radius: $modal-border-radius $modal-border-radius 0 0;
   padding: $modal-padding-y $modal-padding-x;
 
   .title {
