--- a/scss/mixins/_button.scss
+++ b/scss/mixins/_button.scss
@@ -16,7 +16,7 @@
   text-align: center;
   text-transform: uppercase;
   transition-duration: $transition-duration;
-  transition-property: background-color, box-shadow, color;
+  transition-property: background-color, box-shadow;
   transition-timing-function: $transition-timing-function;
   user-select: none;
   vertical-align: middle;
