--- a/scss/common/_button.scss
+++ b/scss/common/_button.scss
@@ -111,51 +111,5 @@
 // Social button
 
 .btn-social {
-  text-shadow: none;
-
-  &::before {
-    font-size: inherit;
-    margin-right: $spacer-sm;
-  }
-
-  &.cas {
-    background-color: $social-cas-color !important;
-    color: color-dynamic($social-cas-color) !important;
-  }
-
-  &.facebook {
-    background-color: $social-facebook-color !important;
-    color: color-dynamic($social-facebook-color) !important;
-  }
-
-  &.github {
-    background-color: $social-github-color !important;
-    color: color-dynamic($social-github-color) !important;
-  }
-
-  &.google,
-  &.google_oauth2 {
-    background-color: $social-google-color !important;
-    border: 0;
-    color: color-dynamic($social-google-color) !important;
-
-    .svg-icon {
-      min-width: $material-icon-size;
-    }
-  }
-
-  &.instagram {
-    background-color: $social-instagram-color !important;
-    color: color-dynamic($social-instagram-color) !important;
-  }
-
-  &.twitter {
-    background-color: $social-twitter-color !important;
-    color: color-dynamic($social-twitter-color) !important;
-  }
-
-  &.yahoo {
-    background-color: $social-yahoo-color !important;
-    color: color-dynamic($social-cas-color) !important;
-  }
+  color: $white-primary;
 }
