Fix input size in dropdown

--- a/scss/common/_form-select-kit.scss
+++ b/scss/common/_form-select-kit.scss
@@ -102,6 +102,7 @@
         &:active,
         &:focus {
           flex-grow: 1;
+          min-height: $control-height;
           padding-right: 0;
           width: 1%;
         }
